--- a/dev/js/containers/BackPart/backPart.scss
+++ b/dev/js/containers/BackPart/backPart.scss
@@ -1,6 +1,10 @@
-.application-container__back-part {
+.back-part {
     width: 1366px;
     height: 4346px;
-    background-color: aqua;
     z-index: 0;
+
+    .back-part__difussion {
+        width: 100%;
+        transform: translateY(-847px);
+    }
 }
