--- a/dev/js/containers/FrontPart/Header/NavContainer/Nav/nav.scss
+++ b/dev/js/containers/FrontPart/Header/NavContainer/Nav/nav.scss
@@ -1,7 +1,7 @@
 .nav {
     width: 25px;
     height: 25px;
-    background-color: transparentize(white, 0.5);
+    background-color: transparentize(white, 0);
 
     margin-left: 63px;
     width: 691px;
@@ -10,8 +10,15 @@
     display: flex;
     
     .nav__menu-element {
-        height: 100%;
-        width: 20px;
-        background-color: transparentize(red, 0.5);
+        font-family: 'Roboto';
+        font-weight: 600;
+        flex-grow: 1;
+        font-size: 12px;
+        //background-color: transparentize(red, 0.5);
+        cursor: pointer;
+
+        display: flex;
+        justify-content: center; 
+        align-items: center;
     }
 }
