--- a/dev/js/containers/FrontPart/frontPart.scss
+++ b/dev/js/containers/FrontPart/frontPart.scss
@@ -3,7 +3,8 @@
     height: 4346px;
     position: absolute;
     z-index: 1;
-
+    overflow: hidden;
+    
     display: flex;
     flex-direction: column;
 }
