--- a/dev/js/containers/FrontPart/ContentBlock/contentBlock.scss
+++ b/dev/js/containers/FrontPart/ContentBlock/contentBlock.scss
@@ -1,3 +1,5 @@
+@import '../../../components/app.scss';
+
 .content-block {
     transform: translate(6px, 329px);
     width: 89.1%;
@@ -16,11 +18,61 @@
     .content-unit {
         width: 50%;
         .content-unit__diagonal {
-            transform: skewX(45deg) translate(-60px, -244px);
+            background-color: purple;
+            transform: skewX(45deg) translate(48px,-443px);
             position: absolute;
             width: 609px;
-            height: 590px;
+            height: 789px;
             opacity: 0.5;
+        }
+        .shifted-info {
+            font-family: 'Roboto';
+            width: 609px;
+            height: 346px;
+            padding: 0 0 0 17px;
+            z-index: 2;
+            position: absolute;
+            transform: translate(-30px, -70px);
+
+            display: flex;
+            flex-flow: column;
+            
+            .shifted-info__date {
+                color: white;
+                font-size: 25px;
+                font-weight: 600;
+                display: flex;
+                span:nth-of-type(1) {
+                    font-size: 70px;
+                }
+                span:nth-of-type(2) {
+                    transform: translateY(10px);
+                }
+            }
+            .shifted-info__action-title {
+                font-size: 26px;
+                color: #4d0099;
+                margin: 10px 0 0 10px;
+            }
+            .shifted-info__action {
+                color: white;
+                font-weight: 600;
+                font-size: 36px;
+                margin: 20px 0 0 10px;
+            }
+            .buttons {
+                display: flex;
+                margin: 32px 0 0 10px;
+
+                .buttons__details {
+                    @include button(210px, 60px, 18px, transparent, white, white, purple);
+                    margin-right: 17px;
+                }
+                .buttons__checkout-tickets {
+                    @include button(210px, 60px, 18px, white, white, purple, white);
+                    margin-left: 17px;
+                }
+            }
         }
     }
 }
