--- a/dev/js/containers/FrontPart/Header/NavContainer/navContainer.scss
+++ b/dev/js/containers/FrontPart/Header/NavContainer/navContainer.scss
@@ -1,3 +1,5 @@
+@import '../../../../components/app.scss';
+
 .nav-container {
     height: 100px;
     width: 100%;
@@ -35,23 +37,7 @@
         }
     }
     .nav-container__tickets-button{
+        @include button(135px, 46px, 13px, transparent, purple, purple, white);
         margin-left: 33px;
-        width: 135px;
-        height: 46px;
-        border: 3px solid purple;
-        font-family: 'Roboto';
-        font-weight: 600;
-        font-size: 13px;
-        cursor: pointer;
-        color: purple;
-        display: flex;
-        justify-content: center; 
-        align-items: center;
-        transition: color 0.08s ease-in, background-color 0.08s ease-in;
-
-        &:hover {
-            background-color: purple;
-            color: white;
-        }
     }
 }
