Eslint added, some devepndencies updated and fixed lint problems

--- a/dev/js/containers/FrontPart/ContentBlock/contentBlock.scss
+++ b/dev/js/containers/FrontPart/ContentBlock/contentBlock.scss
@@ -15,6 +15,12 @@
         background-color: limegreen;
     }
 
+    .offers {
+       display: flex;
+       flex-flow: column;
+       justify-content: flex-start;
+    }
+
     .content-unit {
         width: 50%;
         .content-unit__diagonal {
