--- a/dev/js/containers/FrontPart/ContentBlock/contentBlock.scss
+++ b/dev/js/containers/FrontPart/ContentBlock/contentBlock.scss
@@ -1,35 +1,61 @@
 @import '../../../components/app.scss';
-
 .content-block {
     transform: translate(6px, 329px);
     width: 89.1%;
     height: 691px;
     align-self: center;
-
     display: flex;
     flex-wrap: wrap;
     .purple {
-        background-color: purple;
+        background-color: rgb(155, 62, 205);
     }
     .limegreen {
-        background-color: limegreen;
+        background-color: rgb(119, 193, 0);
     }
-
     .offers {
-       display: flex;
-       flex-flow: column;
-       justify-content: flex-start;
+        display: flex;
+        justify-content: flex-start;
+        align-content: center;
+        flex-direction: column;
+        img {
+            align-self: center;
+            padding: 34px 0 0 0;
+            width: 60px;
+        }
+        span {
+            align-self: center;
+            font-family: Roboto;
+            text-overflow: ellipsis;
+            width: 350px;
+            text-align: center;
+            color: white;
+        }
+        .offers__first-mention {
+            font-size: 23px;
+            font-weight: 600;
+        }
+        .offers__second-mention {
+            padding: 34px 0 0;
+            font-size: 22px;
+            font-weight: 400;
+            text-decoration: underline;
+        }
+        .offers__third-mention {
+            padding: 23px 0 0 0;
+            font-size: 18px;
+            width: 425px;
+        }
     }
-
     .content-unit {
+        height: 350px;
         width: 50%;
         .content-unit__diagonal {
-            background-color: purple;
-            transform: skewX(45deg) translate(48px,-443px);
+            background-color: rgb(117, 62, 205);
+            transform: skewX(45deg) translate(45px, -439px);
             position: absolute;
-            width: 609px;
+            width: 608px;
             height: 789px;
-            opacity: 0.5;
+            opacity: 0.76;
         }
         .shifted-info {
             font-family: 'Roboto';
@@ -39,10 +65,8 @@
             z-index: 2;
             position: absolute;
             transform: translate(-30px, -70px);
-
             display: flex;
             flex-flow: column;
-            
             .shifted-info__date {
                 color: white;
                 font-size: 25px;
@@ -69,13 +93,13 @@
             .buttons {
                 display: flex;
                 margin: 32px 0 0 10px;
-
                 .buttons__details {
                     @include button(210px, 60px, 18px, transparent, white, white, purple);
                     margin-right: 17px;
                 }
                 .buttons__checkout-tickets {
                     @include button(210px, 60px, 18px, white, white, purple, white);
+                    color: rgb(155,62,205);
                     margin-left: 17px;
                 }
             }
