--- a/dev/js/containers/BackPart/backPart.scss
+++ b/dev/js/containers/BackPart/backPart.scss
@@ -1,8 +1,16 @@
 .back-part {
-    width: 1366px;
-    height: 4346px;
-    z-index: 0;
-    .back-part__difussion {
-        width: 100%;
-    }
+   width: 100%;
+   height: 4346px;
+   z-index: 0;
+}
+
+.back-part__difussion {
+   width: 100%;
+}
+
+@media (min-width: 1366px) {
+   .back-part {
+      width: 1366px;
+      height: 4346px;
+   }
 }
