--- a/dev/js/containers/FrontPart/frontPart.scss
+++ b/dev/js/containers/FrontPart/frontPart.scss
@@ -1,10 +1,17 @@
 .front-part {
-    width: 1366px;
-    height: 4346px;
-    position: absolute;
-    z-index: 1;
-    overflow: hidden;
-    
-    display: flex;
-    flex-direction: column;
+   width: 100%;
+   height: 4346px;
+   position: absolute;
+   z-index: 1;
+   overflow: hidden;
+   display: flex;
+   flex-direction: column;
+
+   will-change: transfrom;
+}
+
+@media (min-width: 1366px) {
+   .front-part {
+      width: 1366px;
+   }
 }
